Fix scrollbars for every element

--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
     margin: 0;
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
+    
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+    display: none;
 }
 
 body{
@@ -97,21 +104,18 @@ form button{
     border: 0;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
 .book{
     display: flex;
 }
 
-.book>*::-webkit-scrollbar {
-    display: none;
-  }
+
 
 .book>*{
     flex: 1;
     padding: 1rem;
     overflow-x: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
 
